--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Insta Downloader</title>
+    <link
+      rel="shortcut icon"
+      href="./public/img/svg/title-logo.svg"
+      type="image/x-icon"
+    />
+    <title>Insta Downloader - is an Instagram downloader</title>
   </head>
   <body>
     <div id="root"></div>
