--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     />
     <title>Insta Downloader - is an Instagram downloader</title>
   </head>
-  <body>
+  <body dir="ltr">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
